--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -18,6 +18,9 @@ http {
         root /var/www/public;
         index index.php index.html;
 
+        # Autoriser les uploads jusqu'à 20M
+        client_max_body_size 20M;
+
         location / {
             try_files $uri $uri/ /index.php?$query_string;
         }
@@ -34,3 +37,4 @@ http {
         }
     }
 }
+
